# aoc2024

./: .envrc  .gitignore  aoc2024.cabal  hie.yaml  shell.nix
npins/: sources.json
src/AOC/: Day1.hs  Util.hs
